# tripay-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
tripay/: __init__.py  client.py  constants.py
tripay/payment/: closed.py  open.py
